# Azure-Kinect-Sensor-SDK

include/k4a/: k4a.h  k4atypes.h
include/k4ainternal/: depth.h
src/depth/: depth.c
src/dewrapper/: dewrapper.c
src/image/: image.c
src/record/sdk/: record.cpp
src/sdk/: k4a.c
src/usbcommand/: usbcommand.c
tools/: CMakeLists.txt
tools/k4arawtodepth/: CMakeLists.txt  main.cpp
tools/k4arecorder/: main.cpp  recorder.cpp
tools/k4aviewer/: k4adevicedockcontrol.cpp  k4aviewersettingsmanager.cpp
